# django-timeline-logger

./: .bumpversion.cfg  .coveragerc  .editorconfig  .flake8  .gitignore  .readthedocs.yml  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  code_quality.yml
demo/: README.md  demo.json  manage.py  requirements.in
demo/demo/: settings.py  urls.py
demo/demo_app/: admin.py  apps.py
docs/: Makefile  changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  make.bat  sending_log_reports.rst  settings.rst  usage.rst
reports/: coverage-py310-django32.xml
tests/: compat.py  factories.py  models.py  settings.py  settings_pg.py  test_management_commands.py  test_models.py  test_templatetags.py  test_urls.py  test_views.py
tests/templates/: test_render_message
timeline_logger/: __init__.py  admin.py  apps.py  compat.py  conf.py  manager.py  models.py  resources.py  service.py  urls.py  views.py
timeline_logger/locale/nl/LC_MESSAGES/: django.mo  django.po
timeline_logger/management/commands/: prune_timeline_logs.py  report_mailing.py
timeline_logger/migrations/: 0001_initial.py  0002_auto_20160624_1045.py  0003_auto_20171025_1414.py  0004_alter_fields.py  0005_auto_20220413_0742.py  0006_auto_20220413_0749.py
timeline_logger/templates/timeline_logger/: base.html  created.txt  default.txt  notifications.html  timelinelog_list.html  updated.txt
timeline_logger/templatetags/: timeline.py
