[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-timeline-logger"
version = "4.0.0"
description = "Generic event logger for Django models."
authors = [
    {name = "Maykin Media", email = "support@maykinmedia.nl"}
]
readme = "README.rst"
license = {file = "LICENSE"}
keywords = ["django", "generic logging"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "django>=3.2",
    "django-appconf",
]

[project.urls]
Homepage = "https://github.com/maykinmedia/django-timeline-logger"
Documentation = "http://django-timeline-logger.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/maykinmedia/django-timeline-logger/issues"
"Source Code" = "https://github.com/maykinmedia/django-timeline-logger"
Changelog = "https://github.com/maykinmedia/django-timeline-logger/blob/master/docs/changelog.rst"

[project.optional-dependencies]
tests = [
    "factory-boy",
    "time-machine",
    "psycopg2",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "pytest-pep8",
    "pytest-pylint",
    "pytest-pythonpath",
    "pytest-runner",
    "tox",
    "black",
    "isort",
    "flake8",
]
coverage = [
    "pytest-cov",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]
release = [
    "bump-my-version",
    "twine",
]

[tool.setuptools.packages.find]
include = ["timeline_logger*"]
namespaces = false

[tool.isort]
profile = "black"
combine_as_imports = true
known_django = "django"
known_first_party="timeline_logger"
sections=["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.pytest.ini_options]
testpaths = ["tests"]
DJANGO_SETTINGS_MODULE = "tests.settings_pg"

[tool.bumpversion]
current_version = "4.0.0"
files = [
    {filename = "pyproject.toml"},
    {filename = "README.rst"},
    {filename = "docs/changelog.rst"},
]

[tool.coverage.run]
branch = true
source = [
    "timeline_logger"
]
omit = [
    "demo/*",
    "*/migrations/*",
    "*/tests/*",
]

[tool.coverage.report]
exclude_also = [
    "if (typing\\.)?TYPE_CHECKING:",
    "@(typing\\.)?overload",
    "class .*\\(.*Protocol.*\\):",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
    "\\.\\.\\.",
    "pass",
]
omit = [
    "demo/*",
    "*/migrations/*",
    "*/tests/*",
]

[tool.coverage.html]
directory = "cover"
