[metadata]
name = django-timeline-logger
version = 2.0.0
description = Generic event logger for Django models.
long_description = file: README.rst
url = https://github.com/maykinmedia/django-timeline-logger
project_urls =
    Documentation = http://django-timeline-logger.readthedocs.io/en/latest/
    Changelog = https://github.com/maykinmedia/django-timeline-logger/blob/master/docs/changelog.rst
    Bug Tracker = https://github.com/maykinmedia/django-timeline-logger/issues
    Source Code = https://github.com/maykinmedia/django-timeline-logger
license = MIT
author = Maykin Media
author_email = support@maykinmedia.nl
keywords = django, generic logging
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    django>=3.2
    django-appconf
tests_require =
    factory-boy
    psycopg2
    pytest
    pytest-cov
    pytest-django
    pytest-pep8
    pytest-pylint
    pytest-pythonpath
    pytest-runner
    tox
    black
    isort

[options.packages.find]
include =
    timeline_logger
    timeline_logger.*

[options.extras_require]
tests =
    factory-boy
    psycopg2
    pytest
    pytest-cov
    pytest-django
    pytest-pep8
    pytest-pylint
    pytest-pythonpath
    pytest-runner
    tox
    black
    isort
pep8 = flake8
coverage = pytest-cov
docs =
    sphinx
    sphinx-rtd-theme
release =
    bump2version
    twine

# 3rd party configuration

[aliases]
test=pytest

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
line_length = 88
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
skip = env,.tox,.history,.eggs
known_django=django
known_first_party=timeline_logger
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[tool:pytest]
testpaths = tests
DJANGO_SETTINGS_MODULE = tests.settings_pg

[pep8]
[flake8]
ignore=W293,W291,E501,E261
max-line-length=88
exclude=env,.tox,doc
